MEM-242 - Implement Content Links
- Updating authorizations.html, compliance-oversight.html, mining-lifecycle.html, mine.html

--- a/modules/core/client/scss/global/layout.scss
+++ b/modules/core/client/scss/global/layout.scss
@@ -49,6 +49,14 @@ main {
     a {
         text-decoration: underline;
     }
+
+    // Named anchor helper
+    .pg-anchor[id]:before {
+        content:" ";
+        display:block;
+        height: 98px;
+        margin:-98px 0 0;
+    }
 }
 
 @media (min-width: 760px) {
