--- a/modules/lifecycle/client/views/mining-lifecycle.html
+++ b/modules/lifecycle/client/views/mining-lifecycle.html
@@ -16,8 +16,8 @@
             <section>
                 <h3>Exploration</h3>
                 <h4>Geoscience/Prospecting</h4>
-                <p>Searching for mineral deposits is the first step of the mining lifecycle. During this stage, large areas are often evaluated by airborne or ground-based surveys, such as those conducted by the BC Geological Survey. These surveys provide important geological and geoscientific information about mineral and coal resources and potential. This information encourages investment in mineral and coal exploration by helping prospectors and companies target promising areas.</p>
-                <p>In BC, mineral claims can be staked via Mineral Titles Online by anyone with a Free Miner’s Certificate. The holder of a claim has the right to prospect on that claim (i.e., search for mineral deposits), but mechanized disturbance requires a “Notice of Work” permit, which is issued under the Mines Act.</p>
+                <p>Searching for mineral deposits is the first step of the mining lifecycle. During this stage, large areas are often evaluated by airborne or ground-based surveys, such as those conducted by the <a href="http://www.empr.gov.bc.ca/MINING/GEOSCIENCE/Pages/default.aspx/" target="_blank">BC Geological Survey</a>. These surveys provide important geological and geoscientific information about mineral and coal resources and potential. This information encourages investment in mineral and coal exploration by helping prospectors and companies target promising areas.</p>
+                <p>In BC, mineral claims can be staked via Mineral Titles Online by anyone with a Free Miner’s Certificate. The holder of a claim has the right to prospect on that claim (i.e., search for mineral deposits), but mechanized disturbance requires a <a ui-sref="authorizations({'#': 'minesActPermits'})">“Notice of Work” permit</a>, which is issued under the Mines Act.</p>
                 <h4>Initial Exploration</h4>
                 <p>Once a deposit is discovered, exploration methods such as more detailed surveys, sampling, diamond drilling and trenching may be used to learn more about the deposit (e.g., size, shape, depth, etc.). Data collection for environmental and other studies often begins at this stage.</p>
                 <h4>Advanced Exploration</h4>
@@ -31,7 +31,7 @@
                 <p>The feasibility stage begins once exploration activities indicate that a mineral or coal deposit is worthy of further evaluation. Using the estimated mineral/coal reserve as a basis, feasibility studies assess the technical, legal and economic viability of developing the deposit. Advanced exploration often goes on during the feasibility stage and may result in adjustments to mineral reserve estimates.</p>
                 <h4>Design</h4>
                 <p>Design encompasses the planning stage of mine development and the environmental assessment and permitting processes. During this stage, which often overlaps with the completion of feasibility studies and ongoing advanced exploration, all aspects of mine construction, operation, closure and reclamation are planned in detail.</p>
-                <p>The authorizations process (particularly the environmental assessment, and Mines Act and Environmental Management Act permitting processes) usually informs the design of major mine projects in BC. Decisions on the mine footprint, mining methods, etc. are based on a number of factors, including safety, economics and potential environmental impacts.</p>
+                <p>The authorizations process (particularly the environmental assessment, and <a ui-sref="authorizations({'#': 'minesActPermits'})">Mines Act</a> and <a ui-sref="authorizations({'#': 'emaPermit'})">Environmental Management Act</a> permitting processes) usually informs the design of major mine projects in BC. Decisions on the mine footprint, mining methods, etc. are based on a number of factors, including safety, economics and potential environmental impacts.</p>
                 <p>Plans can change of the course of a mine’s life. For instance, commodity price fluctuations can affect the viability of mining a deposit—lower prices can cause a mine to close early, and higher prices can result in mine life extension. Similarly, ongoing exploration at or near a mine site may result in the discovery of a new deposit or determine that a mineral or coal reserve is bigger than anticipated, which can in turn result in a mine expansion.</p>
                 <h4>Construction</h4>
                 <p>Once a mine project receives the necessary authorizations, construction can begin. First, site preparation activities, such as cutting trees and clearing and stripping overburden, are conducted. Once the site is ready, construction of the mine, associated buildings and structures, and infrastructure such as roads and bridges, can take place.</p>
@@ -41,12 +41,12 @@
             <section>
                 <h3>Operation</h3>
                 <p>The operation phase begins once a mine is constructed and starts producing. Mining operations include extraction and processing of ore as well as waste disposal and ore transport.</p>
-                <p>Progressive reclamation begins during the mine construction phase and continues until a site is fully reclaimed after mine closure.</p>
+                <p><a ui-sref="reclamation-and-securities">Progressive reclamation</a> begins during the mine construction phase and continues until a site is fully reclaimed after mine closure.</p>
             </section>
             <section>
                 <h3>Closure</h3>
-                <p>Mine closure is the final phase of the mining lifecycle. A mine’s life comes to an end once production reserves are exhausted or it is no longer economically viable to continue extracting resources from the site. Shutdown and decommissioning of a mine involves removing equipment (e.g., vehicles, processing equipment), dismantling facilities (e.g., mills, workers’ quarters) and safely closing all mine workings. Mines Act permits include site-specific conditions regarding detailed closure and reclamation plans.</p>
-                <p class="mb-0">Because increases in commodity prices and advances in technology can improve the economic viability of mining a deposit, closed mines are sometimes re-opened. When companies want to re-open or re-develop a major mine that has been closed for many years, they usually need to begin the authorizations process anew.</p>
+                <p>Mine closure is the final phase of the mining lifecycle. A mine’s life comes to an end once production reserves are exhausted or it is no longer economically viable to continue extracting resources from the site. Shutdown and decommissioning of a mine involves removing equipment (e.g., vehicles, processing equipment), dismantling facilities (e.g., mills, workers’ quarters) and safely closing all mine workings. <a ui-sref="authorizations({'#': 'minesActPermits'})">Mines Act permits</a> include site-specific conditions regarding detailed closure and reclamation plans.</p>
+                <p class="mb-0">Because increases in commodity prices and advances in technology can improve the economic viability of mining a deposit, closed mines are sometimes re-opened. When companies want to re-open or re-develop a major mine that has been closed for many years, they usually need to begin the <a ui-sref="authorizations">authorizations</a> process anew.</p>
             </section>
         </main>
         <aside class="col-lg-4">
@@ -54,10 +54,10 @@
                 <h4>Ongoing Lifecycle Activities</h4>
                 <div class="section-body">
                     <h5>Reclamation</h5>
-                    <p>Progressive reclamation begins during the construction phase and continues until a site is fully reclaimed after mine closure.</p>
+                    <p><a ui-sref="reclamation-and-securities">Progressive reclamation</a> begins during the construction phase and continues until a site is fully reclaimed after mine closure.</p>
                     <hr>
                     <h5>Monitoring &amp; Reporting</h5>
-                    <p class="mb-0">Monitoring includes environmental (e.g., water quality) testing and assessments of structures (e.g., tailings management facilities). Monitoring activities begin long before a mine is constructed in order to gather baseline information on the site.</p>
+                    <p class="mb-0">Monitoring includes environmental (e.g., <a ui-sref="water-quality">water quality</a>) testing and assessments of structures (e.g., <a ui-sref="tailings-management">tailings management facilities</a>). Monitoring activities begin long before a mine is constructed in order to gather baseline information on the site.</p>
                 </div>
             </section>
             <section>
