--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -62,8 +62,10 @@
                                                     <i class="material-icons open-icon">add</i>
                                                     <i class="material-icons close-icon">remove</i>
                                                 </a>
-                                                <span class="ah-col name"><a ui-sref="project({projectid: p.code})">Environmental Assessment Certificate</a></span>
-                                                <span class="ah-col date">Issued &nbsp;|&nbsp; 2009-03-16</span>
+                                                <div class="ah-group">
+                                                    <span class="ah-col name"><a ui-sref="project({projectid: p.code})">Environmental Assessment Certificate</a></span>
+                                                    <span class="ah-col date">Issued &nbsp;|&nbsp; 2009-03-16</span>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="collapse" role="tabpanel"
@@ -81,8 +83,10 @@
                                                     <i class="material-icons open-icon">add</i>
                                                     <i class="material-icons close-icon">remove</i>
                                                 </a>
-                                                <span class="ah-col name"><a ui-sref="project({projectid: p.code})">Environmental Assessment Certificate - Amendement</a></span>
-                                                <span class="ah-col date">Certificate Amended &nbsp;|&nbsp; 2013-03-01</span>
+                                                <div class="ah-group">
+                                                    <span class="ah-col name"><a ui-sref="project({projectid: p.code})">Environmental Assessment Certificate - Amendement</a></span>
+                                                    <span class="ah-col date">Certificate Amended &nbsp;|&nbsp; 2013-03-01</span>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="collapse" role="tabpanel"
