MEM-242 - MMTI Implement Content Links
- Continued content development

--- a/modules/authorizations/client/views/authorizations.html
+++ b/modules/authorizations/client/views/authorizations.html
@@ -60,13 +60,13 @@
             </section>
             <section id="otherAuths">
                 <h3>Other Authorizations for Mining Projects in BC</h3>
-                <h4>Tenure Authorizations</h4>
+                <h4 class="pg-anchor" id="tenureAuths">Tenure Authorizations</h4>
                 <p>In British Columbia, sub-surface rights are different from surface rights, and, like proponents of other industrial activities, mining project proponents are required to apply for tenures. The Mineral Titles Branch of the Ministry of Energy and Mines administers the legislation governing the acquisition, exploration and development of mineral, placer mineral, and coal rights in the province. The branch maintains the coal and mineral titles registries under the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96292_01" target="_blank">Mineral Tenure Act</a> and the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/00_04015_01" target="_blank">Coal Act</a> and associated regulations, and issues licences and leases.</p>
                 <ul>
                     <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/mineral-titles" target="_blank">Learn more about claims, licences and leases</a></li>
                     <li><a href="http://www2.gov.bc.ca/gov/content/industry/natural-resource-use/land-use/crown-land/legislation-agreements/acts-regulations" target="_blank">Crown land tenure</a></li>
                 </ul>
-                <h4>Ministry of Forests, Lands and Natural Resource Operations (FLNRO) Authorizations</h4>
+                <h4 class="pg-anchor" id="flnroAuths">Ministry of Forests, Lands and Natural Resource Operations (FLNRO) Authorizations</h4>
                 <p>FLNRO is responsible for:</p>
                 <ul>
                     <li>licensing or approving water use, and water storage facilities or diversion channels under the Water Sustainability Act and the BC Dam Safety Regulation;</li>
