--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -14,86 +14,100 @@
     <div class="row">
         <main class="col-lg-8">
             <section>
-            <h2>Key Statutes &amp; Regulations for Mining in British Columbia</h2>
+                <h2>Key Statutes and Regulations for Mining <span>in British Columbia</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
             <section>
                 <h3>Provincial Statutes</h3>
                 <section class="mt-0">
                     <h4>Environmental Assessment Act</h4>
                     <p>The Environmental Assessment Act provides a mechanism for reviewing proposed major projects in British Columbia, including major mining projects, to assess their potential impacts. The Environmental Assessment Office (EAO) manages the assessment of proposed major projects as required by the Environmental Assessment Act.</p>
-                    <ul>
-                        <li>Environmental Assessment Act</li>
-                        <li>Environmental assessment (EA) process and EA certificates issued to major mines under the Environmental Assessment Act</li>
+                    <ul class="content-external-links">
+                        <li><a href="http://www.bclaws.ca/civix/document/id/consol14/consol14/00_02043_01">Environmental Assessment Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
                     <section>
                         <h5>Reviewable Projects Regulation (Environmental Assessment Office)</h4>
                         <p>The Reviewable Projects Regulation of the Environmental Assessment Act provides for a broad range of major projects to be automatically reviewable if they meet certain thresholds, such as area or production volume.</p>
-                        <ul>
-                            <li>Reviewable Projects Regulation</li>
+                        <ul class="content-external-links">
+                            <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/370_2002">Reviewable Projects Regulation<i class="material-icons">open_in_new</i></a></li>
                         </ul>
                     </section>
+                    <div class="content-links">
+                        <a class="btn content-btn slide-r-btn" title="Learn More about the Environmental Assessment Act" ui-sref="authorizations({'#': 'eaProcess'})"><span>Learn More</span><i class="material-icons">arrow_forward</i></a>
+                    </div>
                 </section>
                 <section>
                     <h4>Mines Act (Ministry of Energy and Mines)</h4>
                     <p>The Mines Act and the accompanying Health, Safety and Reclamation Code for Mines in British Columbia (the Code) protect workers, the public and the environment through provisions for minimizing the health, safety and environmental risks related to mining activities. Proposed major mines (e.g., metal and coal), major expansions/upgrades to existing mines, and some large-scale exploration/development projects require approval under the Mines Act as per part 10 of the Code.</p>
-                    <ul>
-                        <li>Mines Act</li>
-                        <li>Health, Safety and Reclamation Code for Mines in British Columbia</li>
+                    <ul class="content-external-links">
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96293_01">Mines Act<i class="material-icons">open_in_new</i></a></a></li>
+                        <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/health-safety/health-safety-and-reclamation-code-for-mines-in-british-columbia">Health, Safety and Reclamation Code for Mines in British Columbia<i class="material-icons">open_in_new</i></a></li>
                     </ul>
+                    <div class="content-links">
+                        <a class="btn content-btn slide-r-btn" title="Learn More authorizations issued to major mines under EMA" ui-sref="authorizations({'#': 'minesActPermits'})"><span>Learn More</span><i class="material-icons">arrow_forward</i></a>
+                    </div>
                 </section>
                 <section>
                     <h4>Environmental Management Act (Ministry of Environment)</h4>
                     <p>The Environmental Management Act (EMA) regulates industrial and municipal waste discharge, pollution, hazardous waste and contaminated site remediation. EMA provides the authority for introducing wastes into the environment, while protecting public health and the environment. The Act enables the use of permits, regulations and codes of practice to authorize discharges to the environment and enforcement options, such as administrative penalties, orders and fines to encourage compliance. Guidelines and objectives for water quality are developed under EMA.</p>
-                    <ul>
-                        <li>Environmental Management Act</li>
+                    <ul class="content-external-links">
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/03053_00" target="_blank">Environmental Management Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
                     <section>
                         <h5>Waste Discharge Regulation (Ministry of Environment)</h5>
                         <p>The Waste Discharge Regulation identifies those industries and activities requiring authorizations to discharge under the Environmental Management Act (EMA).</p>
-                        <ul>
-                            <li>Read EMA’s Waste Discharge Regulation</li>
+                        <ul class="content-external-links">
+                            <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/320_2004" target="_blank">EMA’s Waste Discharge Regulation</a></li>
                         </ul>
                     </section>
                     <section>
                         <h5>Other EMA Regulations that May Apply to Mining Operations in BC</h5>
                         <p>The Waste Discharge Regulation identifies those industries and activities requiring authorizations to discharge under the Environmental Management Act (EMA).</p>
-                        <ul>
-                            <li>Contaminated Sites Regulation</li>
-                            <li>Hazardous Waste Regulation</li>
-                            <li>Municipal Wastewater Regulation</li>
-                            <li>Placer Mining Waste Control Regulation</li>
+                        <ul class="content-external-links">
+                            <li><a href="http://www.bclaws.ca/EPLibraries/bclaws_new/document/ID/freeside/375_96_00" target="_blank">Contaminated Sites Regulation<i class="material-icons">open_in_new</i></a></li>
+                            <li><a href="http://www.bclaws.ca/Recon/document/ID/freeside/63_88_00" target="_blank">Hazardous Waste Regulation<i class="material-icons">open_in_new</i></a></li>
+                            <li><a href="http://www.bclaws.ca/civix/document/id/lc/statreg/87_2012" target="_blank">Municipal Wastewater Regulation<i class="material-icons">open_in_new</i></a></li>
+                            <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/107_89" target="_blank">Placer Mining Waste Control Regulation<i class="material-icons">open_in_new</i></a></li>
                         </ul>
                     </section>
+                    <div class="content-links">
+                        <a class="btn content-btn slide-r-btn" ui-sref="authorizations({'#': 'emaPermit'})"><span>Learn More</span><i class="material-icons">arrow_forward</i></a>
+                    </div>
                 </section>
                 <section>
                     <h4>Tenure</h4>
-                    <ul>
-                        <li>Mineral Tenure Act</li>
-                        <li>Coal Act</li>
-                        <li>Land Act</li>
-                        <li>Mining Right of Way Act</li>
-                        <li>Learn about tenure authorizations for mining projects</li>
+                    <ul class="content-external-links">
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96292_01" target="_blank">Mineral Tenure Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/00_04015_01" target="_blank">Coal Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96245_01" target="_blank">Land Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96294_01" target="_blank">Mining Right of Way Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
+                    <div class="content-links">
+                        <a class="btn content-btn slide-r-btn" ui-sref="authorizations({'#': 'tenureAuths'})"><span>Learn More</span><i class="material-icons">arrow_forward</i></a>
+                    </div>
                 </section>
                 <section>
                     <h4>Legislation Administered by the Ministry of Forests, Lands and Natural Resource Operations (FLNRO) that May Apply to Mining Operations in BC</h4>
-                    <ul>
-                        <li>Heritage Conservation Act</li>
-                        <li>Water Sustainability Act</li>
-                        <li>Forest Act</li>
-                        <li>Forest and Range Practices Act</li>
-                        <li>Widlife Act</li>
-                        <li>Learn about FLNRO authorizations for major mine projects</li>
+                    <ul class="content-external-links">
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96187_01" target="_blank">Heritage Conservation Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/14015" target="_blank">Water Sustainability Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96157_00" target="_blank">Forest Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/consol21/consol21/00_02069_01" target="_blank">Forest and Range Practices Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96245_01" target="_blank">Land Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/consol24/consol24/00_96488_01" target="_blank">Widlife Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
+                    <div class="content-links">
+                        <a class="btn content-btn slide-r-btn" ui-sref="authorizations({'#': 'flnroAuths'})"><span>Learn More</span><i class="material-icons">arrow_forward</i></a>
+                    </div>
                 </section>
                 <section>
                     <h4>Other Provincial Statutes that May Apply to Mining Operations in BC</h4>
-                    <ul>
-                        <li>Drinking Water Protection Act</li>
-                        <li>Environment and Land Use Act</li>
-                        <li>Public Health Act</li>
-                        <li>Riparian Areas Protection Act</li>
-                        <li>Water Users’ Communities Act</li>
+                    <ul class="content-external-links">
+                        <li><a href="http://www.bclaws.ca/civix/document/id/consol19/consol19/00_01009_01" target="_blank">Drinking Water Protection Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96117_01" target="_blank">Environment and Land Use Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www.bclaws.ca/civix/document/id/consol20/consol20/00_08028_01" target="_blank">Public Health Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="" target="_blank">Riparian Areas Protection Act<i class="material-icons">open_in_new</i></a></li>
+                        <li><a href="http://www2.gov.bc.ca/gov/content/environment/air-land-water/water/laws-rules/water-sustainability-act" target="_blank">Water Users’ Communities Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
                 </section>
             </section>
@@ -101,19 +115,19 @@
                 <h3>Federal Statutes</h3>
                 <section>
                     <h4>Fisheries Act</h4>
-                    <p>Fisheries and Oceans Canada and Environment Canada are responsible for the Fisheries Act. This act’s Metal Mining Effluent Regulations apply to most major mine projects in BC.</p>
+                    <p>Fisheries and Oceans Canada and Environment Canada are responsible for the <a href="http://laws-lois.justice.gc.ca/eng/acts/f-14/" target="_blank">Fisheries Act</a>. This act’s <a href="http://laws-lois.justice.gc.ca/eng/regulations/SOR-2002-222/" target="_blank">Metal Mining Effluent Regulations</a> apply to most major mine projects in BC.</p>
                 </section>
                 <section>
                     <h4>Canadian Environmental Act</h4>
-                    <p>The Canadian Environmental Assessment Agency conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the Canadian Environmental Assessment Act, 2012.</p>
+                    <p>The Canadian Environmental Assessment Agency conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the <a href="http://laws-lois.justice.gc.ca/eng/acts/c-15.21/index.html" target=_"blank">Canadian Environmental Assessment Act, 2012</a>.</p>
                 </section>
                 <section>
                     <h4>Other Federal Statutes</h4>
                     <ul>
-                        <li>Canadian Environmental Protection Act</li>
-                        <li>Migratory Birds Convention Act</li>
-                        <li>Navigation Protection Act</li>
-                        <li>Species at Risk Act</li>
+                        <li><a href="http://laws-lois.justice.gc.ca/eng/acts/c-15.31/" target="_blank">Canadian Environmental Protection Act</a></li>
+                        <li><a href="http://laws-lois.justice.gc.ca/eng/acts/M-7.01/" target="_blank">Migratory Birds Convention Act</a></li>
+                        <li><a href="http://laws-lois.justice.gc.ca/eng/acts/N-22/" target="_blank">Navigation Protection Act</a></li>
+                        <li><a href="http://laws-lois.justice.gc.ca/eng/acts/s-15.3/" target="_blank">Species at Risk Act</a></li>
                     </ul>
                 </section>
             </section>
