--- a/modules/core/client/scss/global/layout.scss
+++ b/modules/core/client/scss/global/layout.scss
@@ -46,10 +46,6 @@ main {
         line-height: 1.5rem;
     }
 
-    a {
-        text-decoration: underline;
-    }
-
     // Named anchor helper
     .pg-anchor[id]:before {
         content:" ";
@@ -65,13 +61,17 @@ main {
             margin-bottom: 2rem;
             font-size: 2rem;
             line-height: 2.25rem;
+
+            span {
+                display: block;
+            }
         }
     }
 }
 
 main {
     section {
-        margin-bottom: 2.5rem;
+        margin-bottom: 2rem;
 
         h3 {
             margin-bottom: 1.5rem;
@@ -83,6 +83,7 @@ main {
         }
 
         h5 {
+            line-height: 1rem;
             font-size: 1rem;
             font-weight: 600;
         }
@@ -91,5 +92,9 @@ main {
             margin-bottom: 1.75rem;
             list-style-type: square;
         }
+    }
+
+    ul.content-external-links {
+        margin-bottom: 2rem;
     }
 }
