Adding in lat/longs for project display Plumbing in basic map route/front end.

--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -9,7 +9,7 @@
                 <div class="hb-btns">
                     <a class="btn slide-l-btn hero-btn inverted" href ui-sref="projects"><i class="material-icons">list</i><span>View List</span></a>
                     <span>or</span>
-                    <a class="btn slide-l-btn hero-btn inverted" href ui-sref="map"><i class="material-icons">map</i><span>View Map</span></a>
+                    <a class="btn slide-l-btn hero-btn inverted" href ui-sref="maps" x-project="projects"><i class="material-icons">map</i><span>View Map</span></a>
                 </div>
             </div>
         </div>
