--- a/modules/maps/client/views/map.html
+++ b/modules/maps/client/views/map.html
@@ -1,4 +1,25 @@
 
-<div class="map-container" id="anchor-top">
-    
+<ui-view id="main-content-section">
+
+    <div class="map-container" id="anchor-top">  
+        <div class="map-layers-view">
+            <ui-gmap-google-map
+                id='project-map'
+                center='mpl.center'
+                zoom='mpl.map.zoom'
+                refresh='true'
+                options='mpl.map.options'>
+                <ui-gmap-markers
+                    models="mpl.projectFiltered"
+                    coords="'self'">
+                </ui-gmap-markers>
+                <ui-gmap-layer  ng-repeat="layer in mpl.KMLLayers"
+                    type="KmlLayer"
+                    options="layer"
+                    show="layer.show">
+                </ui-gmap-layer>
+            </ui-gmap-google-map>
+        </div>
+        <div class="map-legend" id="legend"><h3>Legend</h3></div>
+    </div>
 </div>
