Prototype adjustments to map.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -25,3 +25,4 @@
 // Pages
 @import "modules/home/client/scss/home.scss";
 @import "modules/projects/client/scss/projects.scss";
+@import "modules/maps/client/scss/map.scss";
