--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -6,4 +6,17 @@
     left: 0;
     bottom: 0;
     background: #f1f1f1;
+
+    ui-gmap-google-map {
+       position: absolute;
+       width: 100%;
+       height: 100%;
+    }
+}
+
+.angular-google-map-container {
+   position: fixed;
+   z-index: 9999;
+   width: 100%;
+   height: 100%;
 }
