--- a/modules/maps/client/views/map.html
+++ b/modules/maps/client/views/map.html
@@ -1,25 +1,39 @@
+<div class="map-container">
 
-<ui-view id="main-content-section">
+    <ui-gmap-google-map id='projects-map'
+        center='map.center'
+        zoom='map.zoom'
+        refresh='1'
+        options='map.options'>
 
-    <div class="map-container" id="anchor-top">  
-        <div class="map-layers-view">
-            <ui-gmap-google-map
-                id='project-map'
-                center='mpl.center'
-                zoom='mpl.map.zoom'
-                refresh='true'
-                options='mpl.map.options'>
-                <ui-gmap-markers
-                    models="mpl.projectFiltered"
-                    coords="'self'">
-                </ui-gmap-markers>
-                <ui-gmap-layer  ng-repeat="layer in mpl.KMLLayers"
-                    type="KmlLayer"
-                    options="layer"
-                    show="layer.show">
-                </ui-gmap-layer>
-            </ui-gmap-google-map>
+        <ui-gmap-window
+            show="map.window.show"
+            coords="map.window.model"
+            options="map.window.options"
+            closeClick="map.window.closeClick()"
+            templateUrl="'modules/projects/client/views/projects-partials/projects-map-window.html'"
+            templateParameter="map.window.model"
+            ng-cloak>
+        </ui-gmap-window>
+
+        <ui-gmap-markers
+            models="projects"
+            idKey="'_id'"
+            coords="'self'"
+            type="'cluster'"
+            clusterOptions="map.clusterOptions"
+            events="map.markersEvents">
+        </ui-gmap-marker>
+
+    </ui-gmap-google-map>
+    <div class="row map-filter hidden">
+        <div class="col-sm-12">
+            <div class="form-inline">
+                <div class="form-group form-group-sm">
+                    <span class="form-control-static">Projects Found: {{ projects.length }}</span><br>
+                </div>
+            </div>
         </div>
-        <div class="map-legend" id="legend"><h3>Legend</h3></div>
     </div>
+
 </div>
