--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -6,6 +6,7 @@
     left: 0;
     bottom: 0;
     background: #f1f1f1;
+    z-index: 9999;
 
     ui-gmap-google-map {
        position: absolute;
@@ -14,9 +15,13 @@
     }
 }
 
-.angular-google-map-container {
-   position: fixed;
+.angular-google-map {
    z-index: 9999;
    width: 100%;
    height: 100%;
+}
+
+.angular-google-map-container {
+    width: 100%;
+    height: 100%;
 }
