MEM-248 Building the "Other Docs' tab (Page)
- Markup / styling for mmti-table.scss

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -18,6 +18,7 @@
 @import "components/hero-banner.scss";
 @import "components/mmti-accord.scss";
 @import "components/mmti-list.scss";
+@import "components/mmti-table.scss";
 @import "components/site-activities.scss";
 @import "components/sort-header.scss";
 @import "components/tab-nav.scss";
