--- a/modules/core/client/scss/global/layout.scss
+++ b/modules/core/client/scss/global/layout.scss
@@ -3,10 +3,6 @@ a {
     color: #1a5a96;
 }
 
-body, html, .main {
-    height: 100%;
-}
-
 // Container
 .container {
     margin: 0 auto;
@@ -18,7 +14,7 @@ body, html, .main {
     max-width: 1100px;
 
     section {
-        &:last-child {
+        &.last {
             margin-bottom: 0;
         }
     }
@@ -41,6 +37,18 @@ main {
         font-size: 1.75rem;
     }
 
+    h3 {
+        margin-bottom: 1.5rem;
+        line-height: 1.75rem;
+        font-size: 1.5rem;
+
+        span {
+            display: block;
+            font-size: 1rem;
+            letter-spacing: 0;
+        }
+    }
+
     p {
         font-size: 1rem;
         line-height: 1.5rem;
@@ -59,12 +67,17 @@ main {
     main {
         h2 {
             margin-bottom: 2rem;
-            font-size: 2rem;
             line-height: 2.25rem;
+            font-size: 2rem;
 
             span {
                 display: block;
             }
+        }
+        
+        h3 {
+            line-height: 2rem;
+            font-size: 1.75rem;
         }
     }
 }
@@ -83,7 +96,7 @@ main {
         }
 
         h5 {
-            line-height: 1rem;
+            line-height: 1.25rem;
             font-size: 1rem;
             font-weight: 600;
         }
