Adding maps link from list/home page

--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -75,6 +75,9 @@
                                                     <span class="name">Number of Tailings Impoundments</span>
                                                     <span class="value">{{p.tailingsImpoundments}}</span>
                                                 </li>
+                                                <li>
+                                                    <span class="btn" href ui-sref="maps({project: p})"><i class="material-icons">map</i><span>View Map</span></span>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
