Change bindings to load intro/overview text as html.

--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -110,7 +110,7 @@
                     <h4>External Links &amp; Resources</h4>
                     <ul class="mmti-side-list">
                         <li ng-repeat="l in links">
-                            <a href="{{l.link}}">{{l.title}}</a>
+                            <a target="_blank" href="{{l.link}}">{{l.title}}</a>
                         </li>
                     </ul>
                 </section>
